--- a/public/app/bower.json
+++ b/public/app/bower.json
@@ -10,6 +10,7 @@
     "requirejs-text": "~2.0.5",
     "modernizr": "~2.6.2",
     "handlebars": "~1.3.0",
+    "jquery-form": "~3.46.0",
     "require-handlebars-plugin": "~0.7.0"
   },
   "devDependencies": {}
